Sistema de autenticacion, verificacion, con suscripciones y landing sencilla de test

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,9 +3,84 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>FinanzaApp - Tu Asistente Financiero</title>
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Font Awesome -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+    <style>
+        .hero {
+            background-color: #f8f9fa;
+            padding: 100px 0;
+        }
+        .feature-icon {
+            font-size: 3rem;
+            margin-bottom: 1rem;
+            color: #0d6efd;
+        }
+    </style>
 </head>
 <body>
-    
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container">
+            <a class="navbar-brand" href="#">FinanzaApp</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="./pages/login.html">Iniciar Sesión</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./pages/register.html">Registro</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    <!-- Hero Section -->
+    <section class="hero">
+        <div class="container text-center">
+            <h1 class="display-4 mb-4">Bienvenido a FinanzaApp</h1>
+            <p class="lead mb-5">Tu asistente personal para una mejor gestión financiera</p>
+            <a href="./pages/register.html" class="btn btn-primary btn-lg">Comienza Ahora</a>
+        </div>
+    </section>
+
+    <!-- Features Section -->
+    <section class="py-5">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4 text-center mb-4">
+                    <i class="fas fa-chart-line feature-icon"></i>
+                    <h3>Seguimiento de Gastos</h3>
+                    <p>Mantén un registro detallado de tus gastos e ingresos.</p>
+                </div>
+                <div class="col-md-4 text-center mb-4">
+                    <i class="fas fa-piggy-bank feature-icon"></i>
+                    <h3>Ahorro Inteligente</h3>
+                    <p>Establece metas de ahorro y alcánzalas con nuestras herramientas.</p>
+                </div>
+                <div class="col-md-4 text-center mb-4">
+                    <i class="fas fa-lock feature-icon"></i>
+                    <h3>Seguridad Garantizada</h3>
+                    <p>Tu información financiera está segura con nuestra encriptación avanzada.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Footer -->
+    <footer class="bg-light py-4">
+        <div class="container text-center">
+            <p> 2º DAW | 2025 | PROYECTO SAN VALERO</p> 
+        </div>
+    </footer>
+
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
