--- a/frontend/pages/login.html
+++ b/frontend/pages/login.html
@@ -90,5 +90,6 @@
 
     <!-- Bootstrap JS (opcional, solo si necesitas componentes interactivos de Bootstrap) -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="../js/login.js"></script>
 </body>
 </html>
