--- a/frontend/pages/dashboard.html
+++ b/frontend/pages/dashboard.html
@@ -8,47 +8,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Font Awesome -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="/frontend/styles/dashboard.css">
     <style>
-        body {
-            background-color: #f8f9fa;
-        }
-        .dashboard-container {
-            margin-top: 2rem;
-        }
-        .card {
-            border-radius: 1rem;
-            box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
-            margin-bottom: 1rem;
-            border: none;
-        }
-        .card-title {
-            color: #3b5998;
-            font-weight: bold;
-        }
-        .btn-primary {
-            background-color: #3b5998;
-            border-color: #3b5998;
-        }
-        .btn-primary:hover {
-            background-color: #2d4373;
-            border-color: #2d4373;
-        }
-        .subscription-item {
-            display: flex;
-            align-items: center;
-            padding: 1rem;
-            border-bottom: 1px solid #e9ecef;
-        }
-        .subscription-item:last-child {
-            border-bottom: none;
-        }
-        .subscription-icon {
-            width: 40px;
-            height: 40px;
-            margin-right: 1rem;
-            object-fit: cover;
-            border-radius: 50%;
-        }
+
     </style>
 </head>
 <body>
