--- a/frontend/pages/login.html
+++ b/frontend/pages/login.html
@@ -8,42 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Font Awesome -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
-    <style>
-        body {
-            background-color: #f0f2f5;
-        }
-        .login-container {
-            margin-top: 5%;
-        }
-        .card {
-            border-radius: 1rem;
-            box-shadow: 0 0.5rem 1rem 0 rgba(0, 0, 0, 0.1);
-        }
-        .card-title {
-            color: #3b5998;
-            font-weight: bold;
-        }
-        .btn-primary {
-            background-color: #3b5998;
-            border-color: #3b5998;
-        }
-        .btn-primary:hover {
-            background-color: #2d4373;
-            border-color: #2d4373;
-        }
-        .btn-secondary {
-            background-color: #42b72a;
-            border-color: #42b72a;
-        }
-        .btn-secondary:hover {
-            background-color: #36a420;
-            border-color: #36a420;
-        }
-        .form-control:focus {
-            border-color: #3b5998;
-            box-shadow: 0 0 0 0.2rem rgba(59, 89, 152, 0.25);
-        }
-    </style>
+    <link rel="stylesheet" href="/frontend/styles/login.css">
 </head>
 <body>
     <div class="container login-container">
