--- a/frontend/pages/register.html
+++ b/frontend/pages/register.html
@@ -8,34 +8,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Font Awesome -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
-    <style>
-        body {
-            background-color: #f0f2f5;
-        }
-        .register-container {
-            margin-top: 5%;
-        }
-        .card {
-            border-radius: 1rem;
-            box-shadow: 0 0.5rem 1rem 0 rgba(0, 0, 0, 0.1);
-        }
-        .card-title {
-            color: #3b5998;
-            font-weight: bold;
-        }
-        .btn-primary {
-            background-color: #42b72a;
-            border-color: #42b72a;
-        }
-        .btn-primary:hover {
-            background-color: #36a420;
-            border-color: #36a420;
-        }
-        .form-control:focus {
-            border-color: #42b72a;
-            box-shadow: 0 0 0 0.2rem rgba(66, 183, 42, 0.25);
-        }
-    </style>
+    <link rel="stylesheet" href="/frontend/styles/register.css">
+
 </head>
 <body>
     <div class="container register-container">
@@ -47,7 +21,7 @@
                             <i class="fas fa-piggy-bank fa-2x mb-3"></i><br>
                             Registro en Finanzas App
                         </h2>
-                        <form>
+                        <form id="registerForm">
                             <div class="mb-4">
                                 <div class="input-group">
                                     <span class="input-group-text"><i class="fas fa-user"></i></span>
@@ -80,7 +54,7 @@
                         </form>
                         <div class="text-center mt-4">
                             ¿Ya tienes una cuenta? 
-                            <a href="index.html" class="text-decoration-none">
+                            <a href="login.html" class="text-decoration-none">
                                 <i class="fas fa-sign-in-alt me-1"></i>Iniciar Sesión
                             </a>
                         </div>
@@ -90,8 +64,18 @@
         </div>
     </div>
 
-    <!-- Bootstrap JS (opcional, solo si necesitas componentes interactivos de Bootstrap) -->
+    <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="../js/register.js"></script>
+    
+    <!-- Archivo de JS para manejar el registro -->
+    <script>
+        document.getElementById("registerForm").addEventListener("submit", function(event) {
+            event.preventDefault(); // Evita la recarga de la página
+
+            // Simulación de registro exitoso
+            alert("Registro exitoso. Redirigiendo a la página principal...");
+            window.location.href = "../index.html"; // Redirección correcta
+        });
+    </script>
 </body>
 </html>
