--- a/frontend/pages/dashboard.html
+++ b/frontend/pages/dashboard.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,54 +13,69 @@
         body {
             background-color: #f8f9fa;
         }
+
         .dashboard-container {
             margin-top: 2rem;
         }
+
         .card {
             border-radius: 1rem;
             box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
             margin-bottom: 1rem;
             border: none;
         }
+
         .card-title {
             color: #3b5998;
             font-weight: bold;
         }
+
         .btn-primary {
             background-color: #3b5998;
             border-color: #3b5998;
         }
+
         .btn-primary:hover {
             background-color: #2d4373;
             border-color: #2d4373;
         }
-        .subscription-item, .transaction-item {
+
+        .subscription-item,
+        .transaction-item {
             display: flex;
             align-items: center;
             padding: 1rem;
             border-bottom: 1px solid #e9ecef;
         }
-        .subscription-item:last-child, .transaction-item:last-child {
+
+        .subscription-item:last-child,
+        .transaction-item:last-child {
             border-bottom: none;
         }
-        .subscription-icon, .transaction-icon {
+
+        .subscription-icon,
+        .transaction-icon {
             width: 40px;
             height: 40px;
             margin-right: 1rem;
             object-fit: cover;
             border-radius: 50%;
         }
+
         .transaction-amount {
             font-weight: bold;
         }
+
         .transaction-amount.income {
             color: #28a745;
         }
+
         .transaction-amount.expense {
             color: #dc3545;
         }
     </style>
 </head>
+
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
         <div class="container-fluid">
@@ -82,8 +98,8 @@
     <div class="container dashboard-container">
         <div class="row justify-content-center">
             <div class="col-md-8">
-                <!-- Nueva Sección de Transacciones -->
-                <div class="card">
+                <!-- Sección de Transacciones -->
+                <div class="card mb-4">
                     <div class="card-body">
                         <h2 class="card-title">
                             <i class="fas fa-exchange-alt me-2"></i>Mis Transacciones
@@ -101,6 +117,7 @@
                         </div>
                     </div>
                 </div>
+
                 <!-- Sección de Suscripciones -->
                 <div class="card mb-4">
                     <div class="card-body">
@@ -121,7 +138,20 @@
                     </div>
                 </div>
 
-
+                <!-- Sección de Ahorros -->
+                <div class="card mb-4">
+                    <div class="card-body">
+                        <h2 class="card-title">
+                            <i class="fas fa-piggy-bank me-2"></i>Mis Objetivos de Ahorro
+                        </h2>
+                        <div class="savings-list mb-3">
+                            <!-- Los ahorros se cargarán dinámicamente aquí -->
+                        </div>
+                        <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#addSavingModal">
+                            <i class="fas fa-plus me-1"></i>Añadir Objetivo
+                        </button>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
@@ -164,7 +194,7 @@
         </div>
     </div>
 
-    <!-- Nuevo Modal para añadir transacción -->
+    <!-- Modal para añadir transacción -->
     <div class="modal fade" id="addTransactionModal" tabindex="-1">
         <div class="modal-dialog">
             <div class="modal-content">
@@ -214,12 +244,51 @@
         </div>
     </div>
 
+    <!-- Modal para añadir ahorro -->
+    <div class="modal fade" id="addSavingModal" tabindex="-1">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Añadir Objetivo de Ahorro</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                </div>
+                <div class="modal-body">
+                    <form id="savingForm">
+                        <div class="mb-3">
+                            <label for="savingName" class="form-label">Nombre del objetivo</label>
+                            <input type="text" class="form-control" id="savingName" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="savingGoal" class="form-label">Meta de ahorro</label>
+                            <input type="number" class="form-control" id="savingGoal" step="0.01" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="savingCurrent" class="form-label">Monto actual</label>
+                            <input type="number" class="form-control" id="savingCurrent" step="0.01" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="savingDate" class="form-label">Fecha objetivo</label>
+                            <input type="date" class="form-control" id="savingDate">
+                        </div>
+                        <div class="mb-3">
+                            <label for="savingDescription" class="form-label">Descripción</label>
+                            <textarea class="form-control" id="savingDescription" rows="3"></textarea>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+                            <button type="submit" class="btn btn-primary">Guardar</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    
     <!-- Scripts -->
     <script type="module" src="../js/auth.js"></script>
     <script type="module" src="../js/dashboard.js"></script>
 </body>
-</html>
 
+</html>
